fixed grid images on safari

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,4 +1,5 @@
 html {
+  scroll-behavior: smooth;
   font-size: 50%;
 
   @include media(small-tab) {
