--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -12,6 +12,8 @@
   }
 
   &__img {
+    min-width: 0;
+    min-height: 0;
     height: 100%;
     object-fit: cover;
     object-position: center;
